--- a/works.html
+++ b/works.html
@@ -65,7 +65,7 @@
                     <img src="./images/snakegame.png" class="card-img-top img-fluid" alt="Image 1" style="max-height: 550px; width: auto;">
                     <div class="card-body">
                         <h5 class="card-title">Snake Game</h5>
-                        <p class="card-text">This is a simple snake game. I used JavaScript, HTML, CSS, Bootstrap, and PHP.</p>
+                        <p class="card-text" style="font-weight: 10;">This is a simple snake game. I used JavaScript, HTML, CSS, Bootstrap, and PHP.</p>
                         <a href="https://aisiahhh.github.io/Snake_Game/" target="_blank" class="btn btn-primary">Go to Game</a>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
                     <img src="./images/e-alert.png" class="card-img-top img-fluid" alt="Image 2" style="max-height: 550px; width: auto;">
                     <div class="card-body">
                         <h5 class="card-title">E-Alert</h5>
-                        <p class="card-text">This is a Capstone Project. I used Dart with APIs, Flutter Framework, and Firebase.</p>
-                        <a href="https://e-alert-7510c.web.app/?fbclid=IwZXh0bgNhZW0CMTAAAR096b7euRrBc6jeDMr36_60MVGx6rbzYRaiMepTqAQxWV4gKurp6qWgZBY_aem_HgLL_3XCo0GRe2OdEEuYEQ" target="_blank" class="btn btn-primary">View Project</a>
+                        <p class="card-text" style="font-weight: 10;">This is a Capstone Project. I used Dart with APIs, Flutter Framework, and Firebase.</p>
+                        <a href="https://e-alert-7510c.web.app/?fbclid=IwZXh0bgNhZW0CMTAAAR096b7euRrBc6jeDMr36_60MVGx6rbzYRaiMepTqAQxWV4gKurp6qWgZBY_aem_HgLL_3XCo0GRe2OdEEuYEQ" target="_blank" class="btn btn-primary" >View Project</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <img src="./images/mobile.jpg" class="card-img-top img-fluid" alt="Image 3" style="max-height: 550px; width: auto;">
                     <div class="card-body">
                         <h5 class="card-title">E-Alert Mobile</h5>
-                        <p class="card-text">A mobile application for E-Alert Web. My team used APIs, Kotlin and Firebase.</p>
+                        <p class="card-text" style="font-weight: 10;">A mobile application for E-Alert Web. My team used APIs, Kotlin and Firebase.</p>
                         <a href="https://drive.google.com/drive/folders/1Byc3PRu0NoXv6yewPSbxWJ1JbiUWCB_F" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
 					</div>
                     <div class="card-body">
                         <h5 class="card-title">INTERNSHIP PROJECT</h5>
-                        <p class="card-text">A POS mobile application. I used Dart with Flutter, PHP, and MySQL.</p>
+                        <p class="card-text" style="font-weight: 10;">A POS mobile application. I used Dart with Flutter, PHP, and MySQL.</p>
                         <a href="#" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <img src="./images/calculator.png" class="card-img-top img-fluid" alt="Image 5" style="max-height: 550px; width: auto;">
                     <div class="card-body">
                         <h5 class="card-title">Calculator</h5>
-                        <p class="card-text">A calculator for basic Math. I used HTML, CSS, Bootstrap, and JavaScript.</p>
+                        <p class="card-text" style="font-weight: 10;">A calculator for basic Math. I used HTML, CSS, Bootstrap, and JavaScript.</p>
                         <a href="https://aisiahhh.github.io/SimpleCalculator/" target="_blank" class="btn btn-primary">Go to Calculator</a>
                     </div>
                 </div>
@@ -129,9 +129,9 @@
                 <div class="card">
                     <img src="./images/under.png" class="card-img-top img-fluid" alt="Image 6" style="max-height: 550px; width: auto;">
                     <div class="card-body">
-                        <h5 class="card-title">Certifications</h5>
-                        <p class="card-text">Description for Project 6. It involves certain technologies.</p>
-                        <a href="#" target="_blank" class="btn btn-primary">View Certifications</a>
+                        <h5 class="card-title">School Activities</h5>
+                        <p class="card-text" style="font-weight: 10;">These are collection of my programming activities with Java, HTML, Bootstrap, CSS, and Ruby on Rails.</p>
+                        <a href="https://drive.google.com/drive/folders/1B9AY5uiNF4ZcOjblinPtylR6j3uFFXY1?usp=sharing" target="_blank" class="btn btn-primary">View</a>
                     </div>
                 </div>
             </div>
