--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,54 +8,52 @@
     <!-- Font Awesome for icons -->
     <script src="https://kit.fontawesome.com/f31c9f7a17.js" crossorigin="anonymous"></script>
 
-    <!-- Google Fonts and Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- AOS (Animate On Scroll) -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom: 2px solid #000;">
-
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav mx-auto"> <!-- Center the links on all screen sizes -->
-                <a class="nav-link" href="#landing">Home</a>
-                <a class="nav-link" href="#applications">Projects</a>
-                <a class="nav-link" href="#aboutme">About Me</a>
-                <a class="nav-link" href="mailto:aisiah.santiago0202@gmail.com">Hire me!</a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html">
+                <h2>Home</h2>
+            </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-nav mx-auto">
+                    <a class="nav-link" href="#landing">Home</a>
+                    <a class="nav-link" href="#applications">Projects</a>
+                    <a class="nav-link" href="#aboutme">About Me</a>
+                    <a class="nav-link" href="mailto:aisiah.santiago0202@gmail.com">Hire me!</a>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
+    <section id="landing" data-aos="fade-up">
+        <div class="container-fluid">
+            <h1>Full Stack Web Developer</h1>
+            <h2>Aisiah Santiago</h2>
+            <p>Hi! I am looking for a Mobile and Web Developer position</p>
+            <img src="./images/toga.jpg" id="profile" class="img-fluid" alt="Profile Picture">
+        </div>
+    </section>
 
-
-    <section class="full-page-section section-hidden" id="landing">
-	    <div class="container-fluid" id="home">
-	        <section>
-	            <h1>Full Stack Web Developer</h1>
-	            <h2>Aisiah Santiago</h2>
-	            <p>Hi! I am looking for a Mobile and Web Developer position</p>
-	            <img src="./images/toga.jpg" id="profile" class="img-fluid" alt="Profile Picture">
-	        </section>
-	    </div>
-	</section>
-
-    <section class="full-page-section section-hidden" id="applications">
-    <div class="container section-hidden" id="applications">
-		<section class="full-page-section" id="applications">
-		    <h1 class="text-center mb-4">My Projects</h1>
-		    <p class="text-center mb-5">These are my works using different technologies.</p>
-		</section>
-
-        <div class="container mt-5">
+    <section id="applications" data-aos="fade-up">
+        <div class="container">
+            <h1 class="text-center mb-4">My Projects</h1>
+            <p class="text-center mb-5">These are my works using different technologies.</p>
             <div class="row">
                 <!-- Card 1 -->
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="card">
                         <img src="./images/snakegame.png" class="card-img-top img-fluid" alt="Snake Game">
                         <div class="card-body">
@@ -129,24 +126,23 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-    <section id="aboutme" class="full-page-section section-hidden">
-    <h1 style="text-align: center;">About me!</h1>
-    <div class="container py-5">
+    <section id="aboutme" data-aos="fade-up">
+        <h1 class="text-center">About me!</h1>
+        <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="card shadow-sm mb-4">
-                        <div class="card-header" style="text-align: center;">Background</div>
+                        <div class="card-header text-center">Background</div>
                         <div class="card-body">
                             <p style="text-align: justify;">
-                               I hold a Bachelor of Science in Information Technology from Ateneo de Naga University, graduating with an Honorable Mention. I have experience in both web and app development, with a strong focus on using Flutter for building cross-platform mobile applications and responsive websites. I am proficient in Dart (Flutter), HTML, CSS, JavaScript, PHP, and have hands-on experience with back-end technologies such as Node.js, MySQL, Firebase, and MongoDB.
-                            </p>        
+                                I hold a Bachelor of Science in Information Technology from Ateneo de Naga University, graduating with an Honorable Mention. I have experience in both web and app development, with a strong focus on using Flutter for building cross-platform mobile applications and responsive websites. I am proficient in Dart (Flutter), HTML, CSS, JavaScript, PHP, and have hands-on experience with back-end technologies such as Node.js, MySQL, Firebase, and MongoDB.
+                            </p>
                         </div>
                     </div>
-
                     <!-- Mission Card -->
                     <div class="card shadow-sm mb-4">
                         <div class="card-header" style="text-align: center;">Mission</div>
@@ -160,31 +156,24 @@
                     <!-- Services Card -->
                     <div class="card shadow-sm mb-4">
                         <div class="card-header" style="text-align: center;">Services I Offer</div>
-                        <div class="card-body">
+                        <div class="card-body" style="background-color: transparent;">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">✅ Web Development</li>
-                                <li class="list-group-item">✅ Mobile App Development</li>
-                                <li class="list-group-item">✅ E-commerce Solutions</li>
-                                <li class="list-group-item">✅ Database Management</li>
-                                <li class="list-group-item">✅ Consulting Services</li>
-                                <li class="list-group-item">✅ Technical Support</li>
-                                <li class="list-group-item">✅ API integration</li>
-                                <li class="list-group-item">✅ Backend Support</li>
-                                <li class="list-group-item">✅ Restful APIs</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Web Development</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Mobile App Development</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ E-commerce Solutions</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Database Management</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Consulting Services</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Technical Support</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ API integration</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Backend Support</li>
+                                <li class="list-group-item" style="background-color: transparent; color: white;">✅ Restful APIs</li>
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
-    <!-- Floating Action Button -->
-<div class="fab-container">
-    <a href="mailto:aisiah.santiago0202@gmail.com" class="btn btn-danger fab">
-        <i class="fa-solid fa-paper-plane"></i> <!-- You can use any icon here -->
-    </a>
-</div>
 
     <footer>
         <a href="https://aisiahhh.github.io/fcbportfolio/" target="_blank"><i class="fa-solid fa-globe"></i></a>
@@ -194,34 +183,7 @@
     </footer>
 
     <script>
-   // Function to highlight the navbar link based on the scroll position
-window.addEventListener('scroll', function() {
-    const sections = document.querySelectorAll('section'); // All sections
-    const navLinks = document.querySelectorAll('.navbar-nav .nav-link'); // All navbar links
-    
-    let currentSection = ""; // Variable to track the current section in view
-
-    // Loop through each section to check if it is in the viewport
-    sections.forEach(section => {
-        const sectionTop = section.offsetTop;
-        const sectionHeight = section.offsetHeight;
-        if (window.scrollY >= sectionTop - 100 && window.scrollY < sectionTop + sectionHeight - 100) {
-            currentSection = section.getAttribute('id');
-        }
-    });
-
-    // Loop through all nav links and remove the underline from all
-    navLinks.forEach(link => {
-        link.classList.remove('underlined');
-        // Add underline to the link whose section is in view
-        if (link.getAttribute('href').substring(1) === currentSection) {
-            link.classList.add('underlined');
-        }
-    });
-});
-
-</script>
-
+        AOS.init();
+    </script>
 </body>
-
 </html>
